add create product comment api spec
